# uurmoo-bot

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt
include/: daily_scheduler.h  message_queue.h  utils.h
scripts/: redroid_screenshot.sh  run-daily.fish
src/: daily_scheduler.cpp  main.cpp  message_queue.cpp  utils.cpp
